backport common module to 1.20.1